--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,3 +16,39 @@ body {
   width: 100vw;
   height: 100vh;
 }
+.word_logo {
+  background-image: linear-gradient(64deg, rgb(117, 195, 255) 0%,
+   rgb(255, 92, 154) 100%);
+   background-size: 100%;
+   background-repeat: repeat;
+   font-size: 2rem;
+   font-family: "Inter-Bold", "Inter", sans-serif;
+   font-weight: 700;
+   line-height: 2.2rem;
+   padding-left: 3rem;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent; 
+   -moz-background-clip: text;
+   -moz-text-fill-color: transparent;
+}
+
+.word_logo[data-text-fill] {
+  display: inline-block;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  padding: max(0em, calc(calc(1.3em - var(--framer-line-height, 1.3em)) / 2));
+  margin: min(0em, calc(calc(1.3em - var(--framer-line-height, 1.3em)) / -2));
+}
+
+.nav_container {
+  padding-top: 0.8rem;
+  margin-right: 3em;
+  align-items: center;
+  width: 100%;
+  position: fixed;
+  top: 0;
+}
+
+.fuel_network {
+  background: #25D0AB !important;
+}
