--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -52,3 +52,18 @@ body {
 .fuel_network {
   background: #25D0AB !important;
 }
+
+.stack_container {
+  position: relative;
+  padding: 6rem 0 0 0 ;
+  margin: 0 2rem 0 2rem;
+}
+
+.heading_stack_container {
+  align-items: center;
+  justify-content: center;
+}
+
+.signup_button {
+  margin-top: 1rem !important;
+}
