--- a/frontend/src/css/Demo.css
+++ b/frontend/src/css/Demo.css
@@ -25,7 +25,7 @@ body {
    font-family: "Inter-Bold", "Inter", sans-serif;
    font-weight: 700;
    line-height: 2.2rem;
-   padding-left: 3rem;
+   margin-left: 0.8rem;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; 
    -moz-background-clip: text;
@@ -45,16 +45,19 @@ body {
 }
 
 .nav_container {
-  padding-top: 0.8rem;
-  margin-right: 3em;
+  background-color: #fff;
+  padding: 0.8rem 0 0.8rem 0;
+  margin: 0;
   align-items: center;
   width: 100%;
   position: fixed;
   top: 0;
 }
 
+
 .fuel_network {
   background: #25D0AB !important;
+  margin-right: 0.8rem;
 }
 
 .stack_container {
