--- a/frontend/src/css/Demo.css
+++ b/frontend/src/css/Demo.css
@@ -6,6 +6,10 @@ body {
   width: 100%;
 }
 
+.searchbar {
+  width: 50%;
+}
+
 .container {
   --tw-bg-opacity: 1;
   background-color: rgb(239 239 239/var(--tw-bg-opacity));
