--- a/frontend/src/css/Demo.css
+++ b/frontend/src/css/Demo.css
@@ -7,6 +7,8 @@ body {
 }
 
 .searchbar {
+  display: flex;
+  flex-direction: row;
   width: 100%;
 }
 
@@ -57,10 +59,15 @@ body {
   position: fixed;
   top: 0;
 }
-
+.demo_container{
+  display:flex !important;
+  flex-direction: column;
+  width: 100%;
+}
 .meme-container{
-  display:flex;
+  display:flex !important;
   flex-direction: row !important;
+  flex-wrap: wrap;
   width: 100%;
 }
 
