--- a/frontend/src/css/Meme.css
+++ b/frontend/src/css/Meme.css
@@ -1,7 +1,14 @@
+.image_box {
+  margin: 0.5rem;
+  padding-bottom: 0 !important;
+}
+
 .image_container{
   width: 100%;
+  height: 100%;
  }
 
  img {
   width: inherit;
+  height: inherit;
  }
